# tail2

./: .env  .gitignore  1.py  Caddyfile  Cargo.toml  Makefile  README.md  Rocket.toml  Tail2.toml  calltree.txt  devenv.sh  faq.md  out  perf.data.old  run.py  temp
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
.vim/: coc-settings.json
debcrawl/: .env  Cargo.toml  run.sh
debcrawl/src/: elf_info.rs  main.rs
docs/: 404.html  blog.html  contact.html  faq.html  index.html  pricing.html
docs/_next/static/_n2NyJfOMiVXohPMFMBPk/: _buildManifest.js
docs/_next/static/chunks/: 118-5c671fbdc5825d57.js  d7eeaac4-8272066b8b707ffb.js
docs/_next/static/css/: 0eee500ccbcd0207.css
docs/auth/: sign-in.html  sign-up.html
docs/flamegraph/: app.186866d2.css  app.186866d2.css.map  app.c8d29fc3.js  app.c8d29fc3.js.map  app.html  demangle-cpp.ff403f05.js  demangle-cpp.ff403f05.js.map  index.d15f3b95.css  index.d15f3b95.css.map  index.html  source-map.f62d5ab4.js  source-map.f62d5ab4.js.map
ehdump/: Cargo.toml
ehdump/src/: main.rs
framedump/: Cargo.toml
framedump/src/: main.rs
frontend/: Makefile
frontend/dashboard/: .env  .gitignore  package-lock.json  package.json
frontend/dashboard/scripts/: watch.js
frontend/dashboard/src/: router.tsx
frontend/dashboard/src/theme/: ThemeProvider.tsx
frontend/landing/: Makefile  next.config.js  package.json
frontend/landing/components/footer/: Footer.tsx
frontend/landing/pages/: 404.tsx  contact.tsx  faq.tsx  index.tsx
frontend/landing/styles/: globals.css
frontend/speedscope/: .parcelrc  Makefile  package-lock.json  package.json  tailwind.config.js
frontend/speedscope/assets/: dashboard.html
indextree/: Cargo.toml
indextree/src/: arena.rs  debug_pretty_print.rs  node.rs
indextree/tests/: debug_pretty_print.rs
prodfiler-ebpf/: bpfdefs.h  extmaps.h  frametypes.h  hotspot_tracer.ebpf.c  integration_test.ebpf.c  interpreter_dispatcher.ebpf.c  munmap_monitor.ebpf.c  native_stack_trace.ebpf.c  perl_tracer.ebpf.c  php_tracer.ebpf.c  python_tracer.ebpf.c  ruby_tracer.ebpf.c  sched_monitor.ebpf.c  stackdeltatypes.h  system_config.ebpf.c  tls.ebpf.c  tls.h  tracemgmt.h  types.h  v8_tracer.ebpf.c  v8_tracer.h
scripts/: mmapsnoop.py
speedscope/: .gitignore  .parcelrc  package-lock.json  package.json  tailwind.config.js
speedscope/assets/: app.html  dashboard.html  index.html  sample.html  styles.css
speedscope/assets/data/: sample.txt
speedscope/dashboard/: App.tsx  Dashboard.tsx
speedscope/dashboard/charts/: BarChart01.jsx  BarChart02.jsx  BarChart03.jsx  ChartjsConfig.jsx  DoughnutChart.jsx  LineChart01.jsx  LineChart02.jsx  RealtimeChart.jsx
speedscope/dashboard/css/: style.css
speedscope/dashboard/heatmap/: Cell.tsx  Column.tsx  Row.tsx  XLabels.tsx  YLabelAligner.tsx  YLabels.tsx  index.tsx  useElementHeight.ts
speedscope/dashboard/partials/: Banner.tsx  EditMenu.tsx  Header.tsx  Sidebar.tsx  SidebarLinkGroup.tsx
speedscope/dashboard/utils/: Info.jsx  Transition.jsx
speedscope/src/app-state/: active-profile-state.ts  getters.ts  profile-group.ts
speedscope/src/lib/: profile.ts
speedscope/src/views/: application.tsx  flamechart-minimap-view.tsx  flamechart-pan-zoom-view.tsx  flamechart-view.tsx  style.ts
symdump/: Cargo.toml
symdump/src/: main.rs
tail2/: Cargo.toml
tail2-common/: Cargo.toml
tail2-common/src/: bpf_sample.rs  lib.rs  metrics.rs  module.rs  new_proc_event.rs  pidtgid.rs  procinfo.rs  runtime_type.rs  stack.rs  tracemgmt.rs
tail2-common/src/native/: mod.rs  native_stack.rs
tail2-common/src/native/unwinding/: error.rs  mod.rs
tail2-common/src/native/unwinding/aarch64/: mod.rs  unwind_rule.rs  unwind_table.rs  unwindregs.rs
tail2-common/src/native/unwinding/x86_64/: unwind_rule.rs  unwind_table.rs  unwindregs.rs
tail2-common/src/python/: mod.rs  offsets.rs  state.rs
tail2-common/src/unwinding/: error.rs  mod.rs
tail2-common/src/unwinding/aarch64/: mod.rs  unwind_rule.rs  unwind_table.rs  unwindregs.rs
tail2-common/src/unwinding/x86_64/: mod.rs  unwind_rule.rs  unwind_table.rs  unwindregs.rs
tail2-db/: Cargo.toml  calltree.txt  data.parquet
tail2-db/src/: algo.py  db.rs  lib.rs  manager.rs  metadata.rs  row.rs  tile.rs  window.rs
tail2-db/src/sql/: create_table.sql
tail2-ebpf/: Cargo.toml
tail2-ebpf/src/: a.out  helpers.rs  kernel.rs  main.rs  maps.rs  pyperf.cc  pyperf.rs  sample.rs  test.c  tracemgmt.rs  user.rs  vmlinux.rs
tail2-ebpf/src/pyperf/: mod.rs  pyperf.rs  python_stack.rs  thread.rs
tail2-server/: Cargo.toml
tail2-server/src/: error.rs  main.rs  state.rs
tail2-server/src/routes/: agents.rs  api.rs  dbs.rs  ingest.rs  mod.rs  pages.rs
tail2-server/src/state/: agent_config.rs  agent_state.rs  mod.rs  notifiable.rs  symbolized_calltree.rs
tail2/src/: args.rs  client.rs  config.rs  debugstacktrace.rs  elf.rs  lib.rs  main.rs  proc_mem.rs  processes.rs  stacktrace.rs  tail2.rs  unwind.rs  utils.rs
tail2/src/calltree/: frames.rs  inner.rs  mod.rs  traits.rs
tail2/src/client/: agent_config.rs  api_client.rs  mod.rs  post_stack_client.rs  run.rs  ws_client.rs
tail2/src/dto/: mod.rs  resolved_bpf_sample.rs  stack.rs  stack_dto.rs
tail2/src/probes/: mod.rs  probe.rs  scope.rs
tail2/src/procinfo/: mod.rs  processes.rs  runtime_type.rs
tail2/src/symbolication/: caches.rs  canonical_stack.rs  dump_elf.rs  elf.rs  mod.rs  module.rs  module_cache.rs  proc_map_cache.rs  process_info_cache.rs
tail2/src/symbols/: mod.rs
tail2/src/sysinfo/: mod.rs
tail2/src/unwinding/: debugid.rs  mod.rs  proc_mem.rs
testapp/: main.c  numpy_example.py  server.py  xmas.py
testapp/malloc/: main.c  malloc.c  out  output.csv
testapp/parade/: .gitignore  Cargo.toml
testapp/parade/src/: config.rs  lib.rs  main.rs  parade.rs  strategy.rs
testapp/vec/src/: main.rs
tests/: Cargo.toml  Tail2.toml  alloc.rs
tests/fixtures/aarch64/: malloc
tests/fixtures/x86_64/: malloc
tests/src/: integration.rs  main.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  main.rs  run.rs  test.rs
(+76 files in other folders)
