[package]
name = "debcrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symbolic = { version = "10.1.1", features = [ "demangle" ] }
reqwest = "0.11.10"
tokio = {version = "*", features = ["macros"] }
sqlx = { version = "*", features = ["sqlite", "runtime-tokio-rustls"] }
anyhow = "*"
ar = "0.9.0"
tar = "0.4.38"
ruzstd = "0.3.0"