[package]
name = "ehdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = { version = "0.26.1", features = ["read-core"], default-features = false }
object = "0.29.0"
memmap2 = "0.5.3"
framehop = { version = "0.7.1", path = "../framehop"}