[package]
name = "tail2-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["gimli/read-core"]
user = ["aya", "anyhow", "memmap2", "object", "thiserror", "gimli/read", "lru", "tracing", "parking_lot"]
x86_64 = []
aarch64 = []

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", version = "0.11", optional = true}
# aya = { path = "../../aya/aya", version = "0.11", optional = true}
gimli = { version = "0.27.0", default-features = false, features = ["read-core"], optional = true }
anyhow = { version = "1.0.66", optional = true }
tracing = { version = "0.1.37", optional = true }
memmap2 = { version = "0.5.8", optional = true }
object = { version = "0.30.0", optional = true }
thiserror = { version = "1.0.37", optional = true }
lru = { version = "0.8.1", optional = true }
structstruck = "0.3.0"
parking_lot = { version = "0.12.1", optional = true }

[lib]
path = "src/lib.rs"
