[package]
name = "tail2-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["gimli/read-core"]
user = ["aya", "anyhow", "memmap2", "object", "thiserror", "gimli/read", "lru", "tracing", "serde"]
x86_64 = []
aarch64 = []

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", version = "0.11", optional = true}
# aya = { path = "../../aya/aya", version = "0.11", optional = true}
gimli = { version = "0.27.0", default-features = false, features = ["read-core"], optional = true }
anyhow = { version = "1.0.68", optional = true }
tracing = { version = "0.1.37", optional = true }
memmap2 = { version = "0.5.8", optional = true }
object = { version = "0.30.2", optional = true }
thiserror = { version = "1.0.38", optional = true }
lru = { version = "0.9.0", optional = true }
structstruck = "0.3.0"
serde = { version = "^1.0", features = ["derive", "rc"], optional = true }

[lib]
path = "src/lib.rs"
