[package]
name = "tail2-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["gimli/read-core"]
user = ["aya", "anyhow", "memmap2", "object", "thiserror", "gimli/read", "lru", "tracing", "serde"]
x86_64 = []
aarch64 = []

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", optional = true}
# aya = { path = "../../aya/aya", optional = true}
gimli = { version = "0.27.2", default-features = false, features = ["read-core"], optional = true }
anyhow = { version = "1.0.70", optional = true }
tracing = { version = "0.1.37", optional = true }
memmap2 = { version = "0.5.10", optional = true }
object = { version = "0.30.3", optional = true }
thiserror = { version = "1.0.40", optional = true }
lru = { version = "0.10.0", optional = true }
structstruck = "0.4.0"
serde = { version = "^1.0", features = ["derive", "rc"], optional = true }

[lib]
path = "src/lib.rs"
