[package]
name = "tail2-db"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = "1.24"
anyhow = "*"
duckdb = { version = "0.6.1", features = [] }
# duckdb = { version = "0.6.1", features = [], path = "../../duckdb-rs" }
tail2 = { path = "../tail2", version = "0.1.0", features = [], default-features = false}
bincode = { version = "1.3.3" }
serde = { version = "^1.0", features = ["derive", "rc"] }
fnv = "1.0.7"
parking_lot = "0.12.1"
serde_json = "1.0.91"
