[package]
name = "tail2-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
# aya-bpf = { path = "../../aya/bpf/aya-bpf" }
# aya-log-ebpf = { path = "../../aya/bpf/aya-log-ebpf" }
tail2-common = { path = "../tail2-common" }
gimli = { version = "0.27.2", features = ["read-core"], default-features = false }
libc = "0.2.140"

[features]
x86_64 = [ "tail2-common/x86_64" ]
aarch64 = [ "tail2-common/aarch64" ]

[[bin]]
name = "tail2"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug = true

[workspace]	
members = []	
