[package]
name = "tail2-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
axum = { version = "0.6.1", features = ["json", "ws", "macros", "tokio"] }
reqwest = { version = "0.11.13", features = ["json"] }
tracing = "0.1.37"
fern = "0.6"
# sentry = "0.27.0"
chrono = "0.4.23"
parking_lot = "0.12.1"

serde = { version = "1.0.150", features = ["derive"] }
serde_qs = "0.10.1"
serde_json = "*"

tail2 = { path = "../tail2", version = "0.1.0", features = [], default-features = false }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.5", features = ["full"] }
bincode = { version = "1.3.3" }
tracing-subscriber = "0.3.16"
include_dir = "0.7.3"
mime_guess = "2.0.4"
futures = "0.3.25"
async-stream = "0.3.3"
tokio-stream = "0.1.11"
