[package]
name = "tail2-server"
version = "0.1.0"
edition = "2021"

[features]
deploy = []

[dependencies]
anyhow = "1.0.68"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
axum = { version = "0.6.2", features = ["json", "ws", "macros", "tokio"] }
reqwest = { version = "0.11.13", features = ["json"] }
tracing = "0.1.37"
fern = "0.6"
# sentry = "0.27.0"

serde = { version = "1.0.152", features = ["derive"] }
serde_qs = "0.11.0"
serde_json = "*"

tail2 = { path = "../tail2", version = "0.1.0", features = [], default-features = false }
tail2-db = { path = "../tail2-db", version = "0.1.0" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.5", features = ["full"] }
bincode = { version = "1.3.3" }
tracing-subscriber = "0.3.16"
include_dir = "0.7.3"
mime_guess = "2.0.4"
futures = "0.3.25"
tracing-appender = "0.2.2"
async-stream = "0.3.3"
fnv = "1.0.7"
