[package]
name = "tail2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tail2-common = { path = "../tail2-common", default-features = false }

aya = { git = "https://github.com/aya-rs/aya", branch = "main", version = "0.11", features=["async_tokio"], optional = true }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" , optional = true}
# aya = { path = "../../aya/aya", version = "0.11", features=["async_tokio"] }
# aya-log = { path = "../../aya/aya-log" }

anyhow = "1.0.66"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
libc = "0.2.138"
log = "0.4"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
tokio-stream = "0.1.11"
thiserror = "1.0.37"
object = "0.30.0"
ctrlc = "3.2.4"
bytes = "1.3.0"
debugid = "0.8.0"
memmap2 = "0.5.8"
fxhash = "0.2.1"
procfs = "0.14.2"
reqwest = "0.11.13"
serde_qs = "0.10.1"

bincode = { version = "1.3.3" }
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "1.0.89"
symbolic = { version = "10.2.1", features = [ "demangle" ] }
lru = "0.8.1"
lazy_static = "1.4.0"
itertools = "0.10.5"
indextree = { version = "4.5.0", features = ["deser"]}
indexmap = "1.9.2"
parking_lot = "0.12.1"

toml = "0.5" 
nix = { version = "0.26.1", features = ["process"] }
shlex = "1.1.0"
reqwest-eventsource = "0.4.0"

tokio-tungstenite = "*"

[features]
default = ["aya", "aya-log"]
x86_64 = ["tail2-common/x86_64", "tail2-common/user"]
aarch64 = ["tail2-common/aarch64", "tail2-common/user"]

[[bin]]
name = "tail2"
path = "src/main.rs"

[lib]
name = "tail2"
path = "src/lib.rs"
