[package]
name = "tail2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tail2-common = { path = "../tail2-common", default-features = false }

aya = { git = "https://github.com/aya-rs/aya", branch = "main", features=["async_tokio"], optional = true }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" , optional = true}
# aya = { path = "../../aya/aya", features=["async_tokio"] }
# aya-log = { path = "../../aya/aya-log" }

anyhow = "1.0.70"
clap = { version = "4.2", features = ["derive"] }
libc = "0.2.140"
tracing = "0.1.37"
tokio = { version = "1.27", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
thiserror = "1.0.40"
object = "0.30.3"
ctrlc = "3.2.5"
bytes = "1.4.0"
debugid = "0.8.0"
memmap2 = "0.5.10"
fxhash = "0.2.1"
procfs = "0.15.1"
reqwest = "0.11.16"
serde_qs = "0.12.0"

bincode = { version = "1.3.3" }
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "1.0.95"
symbolic = { version = "12.1.2", features = [ "demangle" ] }
lru = "0.10.0"
indextree = { version = "4.5.0", features = ["deser"], path = "../indextree" }
indexmap = "1.9.3"

toml = "0.7" 
nix = { version = "0.26.2", features = ["process"] }
shlex = "1.1.0"
reqwest-eventsource = "0.4.0"

tokio-tungstenite = "*"
futures-util = "0.3.28"
gethostname = "0.4.1"
once_cell = "1.17.1"
tracing-subscriber = "0.3.16"
fnv = "1.0.7"
parking_lot = "0.12.1"

[features]
default = ["aya", "aya-log"]
x86_64 = ["tail2-common/x86_64", "tail2-common/user"]
aarch64 = ["tail2-common/aarch64", "tail2-common/user"]

[[bin]]
name = "tail2"
path = "src/main.rs"

[lib]
name = "tail2"
path = "src/lib.rs"
doctest = false

[profile.release]
debug = true
