[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
tail2 = { version = "0.1.0", path = "../tail2", features = ["aarch64"]}
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }

[[test]]
name = "integration"
path = "src/integration.rs"