[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[dependencies]
tail2 = { version = "0.1.0", path = "../tail2", features = [], default-features = false }
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
anyhow = "*"

[features]
x86_64 = ["tail2/x86_64"]
aarch64 = ["tail2/aarch64"]

[[bin]]
name = "tail2-tests"
path = "src/main.rs"

[[test]]
name = "integration"
path = "src/integration.rs"
