[package]
name = "parade"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parade"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = "*"
rayon = "1.5.3"
clap = { version = "3.1.18", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }